# mutual_fund_analysis

./: .gitignore  LICENSE  README.md  render.yaml  requirements.txt
api/: main.py  requirements.txt
api/core/: cagr.py  common.py  compare.py  funds.py  nav.py  rolling.py  sip.py  stp.py  swp.py
api/models/: schemas.py
app/: app.py  insights.py  server.R  ui.R  utils.R
data/: mf_codes.txt  mf_codes_eq.txt
engine/: rolling-sip-xirr.cabal
engine/app/: Main.hs
notebooks/: aum_explore.ipynb  explore.ipynb  mf_explore.ipynb
src/: returns.R  utils.R
tests/: test_core_financials.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/cagr/: page.tsx
web/app/compare/: page.tsx
web/app/nav/: page.tsx
web/app/sip/: page.tsx
web/app/stp/: page.tsx
web/app/swp/: page.tsx
web/components/: FundSearch.tsx  MetricCard.tsx  Sidebar.tsx
web/lib/: FundContext.tsx  api.ts  utils.ts
