cabal-version:      2.4
name:               rolling-sip-xirr
version:            0.1.0.0
build-type:         Simple

executable rolling-sip-xirr
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base >=4 && <5,
                      aeson,
                      bytestring,
                      text,
                      time,
                      containers
    default-language: Haskell2010
    ghc-options:      -O2
